--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -154,10 +154,10 @@ img {
 	width: 100%;
 }
 
-@media (min-width: 768px) {
+@include media-breakpoint-up(lg) {
 	.pokemon-btn{
-		width: 150px;
-    	height: 150px;
+		//width: 150px;
+    	//height: 150px;
 	}
 }
 .pokemon-btn, .badge-img-container {
@@ -463,7 +463,7 @@ img {
 .sidebar.collapsed {
 	max-width: var(--sidebar-collapsed-width);
 }
-@include media-breakpoint-down(md) { // Mobile
+@include media-breakpoint-down(xl) { // Mobile
 	.sidebar-margin {
 		flex: 0 0 calc(var(--sidebar-collapsed-width-mobile) + var(--sidebar-expand-bar));
 	}
@@ -473,7 +473,7 @@ img {
 }
 
 /* Titles */
-@include media-breakpoint-up(md) {
+@include media-breakpoint-up(xl) {
 	.type-specialist-title {
 		height: 48px;
 	}
@@ -486,16 +486,21 @@ img {
 .pokemon-slot-button {
 	background-repeat: no-repeat;
 }
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(xl) {
 	#main-page-pkmn {
 		.badge-pokemon-slot .pokemon-slot-button {
 			width: 100% !important;
 		}
+	}
+}
+@include media-breakpoint-down(md) {
+	#main-page-pkmn {
 		.type-specialist-title, .gym-leader-title {
 			letter-spacing: normal !important;
 		}
 	}
 }
+
 
 /* Template */
 #template-pkmn {
